Пример Javafx+ spring не потерять